# taperecorder

./: CMakeLists.txt  README.md
apps/hctape/: hctape.cpp
include/tr/: tr.h  trBuffer.h  trBuffer_file.h  trDataAnalyzer.h  trSample.h  trSample_raw.h  trdefs.h
src/: trBuffer_file.cpp  trDataAnalyzer.cpp  trSample.cpp  trSample_raw.cpp  trdefs.cpp
